@@ -21,35 +21,35 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
-    SELLER(
-            Set.of(
-                    SELLER_READ,
-                    SELLER_UPDATE,
-                    SELLER_DELETE,
-                    SELLER_CREATE
-            )
-    ),
-    CUSTOMER(
-            Set.of(
-                    CUSTOMER_READ,
-                    CUSTOMER_UPDATE,
-                    CUSTOMER_DELETE,
-                    CUSTOMER_CREATE
-            )
-    )
+  USER(Collections.emptySet()),
+  SELLER(
+          Set.of(
+                  SELLER_READ,
+                  SELLER_UPDATE,
+                  SELLER_DELETE,
+                  SELLER_CREATE
+          )
+  ),
+  CUSTOMER(
+          Set.of(
+                  CUSTOMER_READ,
+                  CUSTOMER_UPDATE,
+                  CUSTOMER_DELETE,
+                  CUSTOMER_CREATE
+          )
+  )
 
-    ;
+  ;
 
-    @Getter
-    private final Set<Permission> permissions;
+  @Getter
+  private final Set<Permission> permissions;
 
-    public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions()
-                .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .collect(Collectors.toList());
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-        return authorities;
-    }
+  public List<SimpleGrantedAuthority> getAuthorities() {
+    var authorities = getPermissions()
+            .stream()
+            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+            .collect(Collectors.toList());
+    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+    return authorities;
+  }
 }
